# qa_guru_python_6_19

./: pyproject.toml
